dependency on ~>3.1.0 added becuase of a spree migration that comes with it that renamestable involved in this gem

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,3 +3,7 @@
 
 en:
   hello: "Hello world"
+  spree:
+     import: Import
+     excel_file: "Spreadsheet File"
+     csv_file: "Spreadsheet File"
