--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,5 +5,6 @@ en:
   hello: "Hello world"
   spree:
      import: Import
+     export: Export
      excel_file: "Spreadsheet File"
      csv_file: "Spreadsheet File"
